# Hospital_Django

./: .gitignore  README.md  manage.py  pyproject.toml
Hospital_Django/: asgi.py  settings.py  urls.py  wsgi.py
src/apps/doctor/models/: Atencion.py
src/apps/security/: admin.py  apps.py
src/apps/security/models/: Groups.py  Menu.py  Module.py  Users.py  __init__.py
src/config/: settings.py
