[project]
name = "hospital-django"
version = "0.1.0"
description = "Proyecto de un Hospital en django, permite gestionar pacientes y doctores"
authors = [
    {name = "thehunter101",email = "thehuntyer10121@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)"
]

[tool.poetry]
packages = [{include = "hospital_django", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
